changed color to avoid contrast problem

--- a/css/style.css
+++ b/css/style.css
@@ -652,7 +652,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #000!important;
 }
 
 .container {
@@ -737,7 +737,7 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: #000000!important;
 }
 
 .portfolio-thumb {
@@ -781,7 +781,7 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #000000!important;
 }
 
 .btn-atomic-tangerine:hover {
@@ -844,7 +844,7 @@ h4 {
     .navbar .nav {
         max-width: 80%;
         list-style: none;
-        right: 150px
+
     }
     .nav-center.navbar .nav {
         max-width: 100%
